
hdrs = [
    'cusp.cuh',
    'copy.cuh',
    'kernel.cuh',
    'add.cuh',
    'complex_to_mag_squared.cuh',
    'complex_to_mag.cuh',
    'conjugate.cuh',
    'divide.cuh',
    'multiply.cuh',
    'multiply_const.cuh',
    'channelizer.cuh',
    'convolve.cuh',
    'deinterleave.cuh',
    'fft.cuh'
]
install_headers(hdrs, subdir : 'cusp')
